# Hamada

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Diagnostics.h  Hamada.cpp  Hamada.sln  Hamada.vcxproj  Hamada.vcxproj.filters  Lexer.h  README.md  main.cpp  spec.md
Diagnostics/src/: CMakeLists.txt
Diagnostics/src/Diagnostics/: Diagnostics.cpp  Diagnostics.h
Lexer/: Lexer.cpp
Lexer/src/: CMakeLists.txt
Lexer/src/Lexer/: Lexer.cpp  Lexer.h
Lexer/test/: Leser_test_strings.cpp  Lexer_test_expr.cpp  Lexer_test_identifier.cpp  Lexer_test_keywords.cpp  Lexer_test_numbers.cpp  Lexer_test_operators.cpp  Lexer_test_others.cpp  helpers.cc
Parser/: Parser.h
Parser/src/: CMakeLists.txt
Parser/src/Parser/: Expr.h  Parser.cpp  Parser.h
Utility/src/: CMakeLists.txt
Utility/src/Utility/: Utility.h
